# ITMO_Programming

./: .gitignore  README.md
file/: CMakeLists.txt
lab1.01/: main.c
lab1.02/: CMakeLists.txt  main.c
lab1.04/: CMakeLists.txt
lab1.05/: main.c
lab1.06/: CMakeLists.txt  main.c
lab1.07/: CMakeLists.txt  main.c
lab1.08/: main.c
lab1.09/: CMakeLists.txt  main.c
lab1.10/: CMakeLists.txt  main.c
lab1.11/: CMakeLists.txt  Triangle.c  Triangle.h  main.c
lab1.12/: CMakeLists.txt  main.c
lab1.13/: CMakeLists.txt  FrameID3v2.c  FrameID3v2.h  MP3.c  MP3.h  main.c
lab1.14/: CMakeLists.txt
lab1.15/: CMakeLists.txt
lab1.3/: main.c
lab1.4/: main.c
lab1.4(bin)/: CMakeLists.txt  main.c
lab1.7/: main.c
lab1.8/: CMakeLists.txt  main.c
lab1.9/: main.c
lab2.01/: CMakeLists.txt  main.cpp
lab2.01/src/: Broken.cpp  Broken.hpp  Closed.cpp  Closed.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  Regular.cpp  Regular.hpp  Segment.cpp  Segment.hpp  Trapezoid.cpp  Trapezoid.hpp  Triangle.cpp  Triangle.hpp  Vector.cpp  Vector.hpp
lab2.02/: CMakeLists.txt  main.cpp
lab2.03/: CMakeLists.txt  main.cpp
lab2.03/libs/StringPro/src/: StringPro.cpp  StringPro.hpp
lab2.03/src/: BusRoute.hpp  GeoObject.cpp  GeoObject.hpp  GeoPoint.cpp  GeoPoint.hpp  Route.cpp  Route.hpp  Station.cpp  Station.hpp  Street.cpp  Street.hpp  TramRoute.hpp  TrollRoute.hpp
lab2.04/: CMakeLists.txt  MyAlgorithm.cpp  MyAlgorithm.hpp  main.cpp
lab2.05/: CMakeLists.txt  main.cpp
lab2.06/: main.cpp
sadf/: CMakeLists.txt
untitled/: main.c
untitled1/: main.c
(+22 files in other folders)
